Fixed horizontal gutter gap. Added bigcenter image
Added a .2% to Horizontal gutters between rows in order to make them
even with horizontal gutters between 2 column images.

Added a bigcenter image to work page.

--- a/css/work.scss
+++ b/css/work.scss
@@ -83,7 +83,7 @@ $buttonsize:5px;
 	& img{ 
 		@include stack();
 		&:last-child{
-			margin-top:11%;
+			margin-top:10.2%;
 		}
 	}
 }
@@ -102,7 +102,14 @@ $buttonsize:5px;
 	& img{ 
 		@include stack();
 		&:last-child{
-			margin-top:11%;
+			margin-top:10.2%;
 		}
 	}
+}
+
+//bigcenter
+.bigcenter img{
+	@include center(100%);
+	width: 100%;
+	margin-top: 3.3%;
 }
